Improved text and design with installer.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -33,6 +33,7 @@ assetic:
     bundles:
         - "ClubLayoutBundle"
         - "ClubBookingBundle"
+        - "ClubInstallerBundle"
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
