--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -11,7 +11,7 @@ security:
 
     role_hierarchy:
         ROLE_SUPER_ADMIN: ROLE_ADMIN
-        ROLE_ADMIN: [ROLE_BLOG_ADMIN, ROLE_BOOKING_ADMIN, ROLE_EVENT_ADMIN, ROLE_MEMBER_ADMIN, ROLE_MESSAGE_ADMIN, ROLE_MATCH_ADMIN, ROLE_SHOP_ADMIN, ROLE_TEAM_ADMIN,  ROLE_PASSKEY_ADMIN,  ROLE_TOURNAMENT_ADMIN, ROLE_NEWS_ADMIN]
+        ROLE_ADMIN: [ROLE_BLOG_ADMIN, ROLE_BOOKING_ADMIN, ROLE_EVENT_ADMIN, ROLE_MEMBER_ADMIN, ROLE_MESSAGE_ADMIN, ROLE_MATCH_ADMIN, ROLE_SHOP_ADMIN, ROLE_TEAM_ADMIN,  ROLE_PASSKEY_ADMIN,  ROLE_TOURNAMENT_ADMIN, ROLE_NEWS_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
         main:
@@ -31,6 +31,7 @@ security:
         user:
             pattern: ^/
             anonymous: ~
+            switch_user: false
             form_login:
                 failure_handler: failure.password.handler
                 success_handler: success.login.handler
