--- a/src/Club/ShopBundle/Resources/config/services.yml
+++ b/src/Club/ShopBundle/Resources/config/services.yml
@@ -4,7 +4,7 @@ services:
     arguments: [@doctrine.orm.entity_manager,@session,@security.context]
   order:
     class: Club\ShopBundle\Helper\Order
-    arguments: [@doctrine.orm.entity_manager,@event_dispatcher]
+    arguments: [@service_container]
   subscription:
     class: Club\ShopBundle\Helper\Subscription
     arguments: [@doctrine.orm.entity_manager,@session,@translator]
