--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "symfony/symfony": "2.1.*",
         "doctrine/orm": ">=2.2.3,<2.4-dev",
         "doctrine/doctrine-bundle": "1.0.*",
-        "twig/extensions": "1.0.*",
+        "twig/extensions": "1.0.*@dev",
         "symfony/assetic-bundle": "2.1.*",
         "symfony/swiftmailer-bundle": "2.1.*",
         "symfony/monolog-bundle": "2.1.*",
@@ -18,8 +18,9 @@
         "sensio/generator-bundle": "2.1.*",
         "jms/security-extra-bundle": "1.2.*",
         "jms/di-extra-bundle": "1.1.*",
-        "clubmaster/quickpay": "master",
-        "clubmaster/economic": "master",
+        "kriswallsmith/assetic": "1.1.*@dev",
+        "clubmaster/quickpay": "dev-master",
+        "clubmaster/economic": "dev-master",
         "sabre/vobject": "dev-master"
     },
     "scripts": {
@@ -36,7 +37,6 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
         ]
     },
-    "minimum-stability": "dev",
     "extra": {
         "symfony-app-dir": "app",
         "symfony-web-dir": "web"
