--- a/src/Club/FormExtraBundle/Resources/config/form.yml
+++ b/src/Club/FormExtraBundle/Resources/config/form.yml
@@ -1,45 +1,45 @@
 services:
     club_layout_form_extension:
-        class: Club\LayoutBundle\Form\HelpTypeExtension
+        class: Club\FormExtraBundle\Form\HelpTypeExtension
         tags:
             - { name: "form.type_extension", alias: "field" }
     club_layout_form_tinymce:
-        class: Club\LayoutBundle\Form\TinyMceType
+        class: Club\FormExtraBundle\Form\TinyMceType
         tags:
             - { name: "form.type", alias: "tinymce" }
     club_layout_form_jquery_calendar:
-        class: Club\LayoutBundle\Form\JQueryDateTimeType
+        class: Club\FormExtraBundle\Form\JQueryDateTimeType
         tags:
             - { name: "form.type", alias: "jquery_datetime" }
     club_layout_form_jquery_date:
-        class: Club\LayoutBundle\Form\JQueryDateType
+        class: Club\FormExtraBundle\Form\JQueryDateType
         tags:
             - { name: "form.type", alias: "jquery_date" }
     club_layout_form_jquery_birthday:
-        class: Club\LayoutBundle\Form\JQueryBirthdayType
+        class: Club\FormExtraBundle\Form\JQueryBirthdayType
         tags:
             - { name: "form.type", alias: "jquery_birthday" }
     club_layout_form_jquery_autocomplete:
-        class: Club\LayoutBundle\Form\JQueryAutocompleteType
+        class: Club\FormExtraBundle\Form\JQueryAutocompleteType
         arguments: [@doctrine.orm.entity_manager, @translator]
         tags:
             - { name: "form.type", alias: "jquery_autocomplete" }
     club_layout_form_gender:
-        class: Club\LayoutBundle\Form\GenderType
+        class: Club\FormExtraBundle\Form\GenderType
         arguments: [@translator]
         tags:
             - { name: "form.type", alias: "gender" }
     club_layout_form_best_of_set:
-        class: Club\LayoutBundle\Form\BestOfSetType
+        class: Club\FormExtraBundle\Form\BestOfSetType
         tags:
             - { name: "form.type", alias: "best_of_set" }
     club_layout_form_day:
-        class: Club\LayoutBundle\Form\DayType
+        class: Club\FormExtraBundle\Form\DayType
         arguments: [@translator]
         tags:
             - { name: "form.type", alias: "day" }
     club_layout_form_hour:
-        class: Club\LayoutBundle\Form\HourType
+        class: Club\FormExtraBundle\Form\HourType
         arguments: [@translator]
         tags:
             - { name: "form.type", alias: "hour" }
