Added support for pay events in shop.

--- a/src/Club/EventBundle/Resources/config/listener.yml
+++ b/src/Club/EventBundle/Resources/config/listener.yml
@@ -22,3 +22,8 @@ services:
     arguments: [@service_container]
     tags:
       - { name: kernel.event_listener, event: version.migrate, method: onVersionMigrate }
+  club.eventbundle.shop_listener:
+    class: Club\EventBundle\Listener\ShopListener
+    arguments: [@service_container]
+    tags:
+      - { name: kernel.event_listener, event: order.paid, method: onOrderPaid }
