Cleanup shopping carts after 2 weeks.

--- a/src/Club/ShopBundle/Resources/config/listener.yml
+++ b/src/Club/ShopBundle/Resources/config/listener.yml
@@ -52,3 +52,9 @@ services:
     arguments: [@service_container]
     tags:
       - { name: kernel.event_listener, event: version.migrate, method: onVersionMigrate }
+  club.shop.listener.cleanup:
+    class: Club\ShopBundle\Listener\Cleanup
+    arguments: [@doctrine.orm.entity_manager]
+    tags:
+      - { name: kernel.event_listener, event: task.cleanup, method: onTaskCleanup }
+
