Removed kernel.request for location.

--- a/src/Club/UserBundle/Resources/config/services.yml
+++ b/src/Club/UserBundle/Resources/config/services.yml
@@ -22,3 +22,6 @@ services:
     club_user.currency:
         class: Club\UserBundle\Helper\Currency
         arguments: [@doctrine.orm.entity_manager, @session]
+    club_user.location:
+        class: Club\UserBundle\Helper\Location
+        arguments: [@doctrine.orm.entity_manager, @session, @logger]
