--- a/src/Club/UserBundle/Resources/config/listener.yml
+++ b/src/Club/UserBundle/Resources/config/listener.yml
@@ -54,3 +54,8 @@ services:
     arguments: [@service_container]
     tags:
       - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
+  club.userbundle.cache_clear:
+    class: Club\UserBundle\Listener\CacheClear
+    arguments: [@service_container]
+    tags:
+      - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
