Added twitter integration.

--- a/app/config/clubmaster.yml
+++ b/app/config/clubmaster.yml
@@ -118,6 +118,6 @@ club_tournament:
     enabled: true
 
 club_extra:
-    facebook: true
-    twitter: true
-    google: true
+    #facebook: true
+    #twitter: true
+    #googleplus: true
