--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -16,9 +16,8 @@ framework:
     templating:      { engines: ['twig'] } #assets_version: SomeVersionScheme
     default_locale:  %locale%
     trusted_proxies: ['127.0.0.1'] # a list of proxy IPs you trust
-    session:        ~
-    #session:
-        #save_path: "%kernel.root_dir%/sessions"
+    session:
+        save_path: ~
 
 # Twig Configuration
 twig:
