--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -9,15 +9,18 @@ framework:
     secret:          %secret%
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
-        strict_requirements: %kernel.debug%
-    form:            true
-    csrf_protection: true
+        strict_requirements: ~
+    form:            ~
+    csrf_protection: ~
     validation:      { enable_annotations: true }
-    templating:      { engines: ['twig'] } #assets_version: SomeVersionScheme
+    templating:
+        engines: ['twig']
+        #assets_version: SomeVersionScheme
     default_locale:  %locale%
-    trusted_proxies: ['127.0.0.1'] # a list of proxy IPs you trust
+    trusted_proxies: ~
     session:
         save_path: ~
+    fragments:  ~
 
 # Twig Configuration
 twig:
