--- a/src/Club/TaskBundle/Resources/config/listener.yml
+++ b/src/Club/TaskBundle/Resources/config/listener.yml
@@ -1,12 +1,12 @@
 services:
   club.taskbundle.listener.task:
     class: Club\TaskBundle\Listener\TaskListener
-    arguments: [@service_container, @doctrine.orm.entity_manager, @event_dispatcher, @logger]
+    arguments: [@service_container, @doctrine.orm.default_entity_manager, @event_dispatcher, @logger]
     tags:
       - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
   club.task.fixtures.load:
     class: Club\TaskBundle\Fixtures\Load
-    arguments: [@doctrine.orm.entity_manager]
+    arguments: [@doctrine.orm.default_entity_manager]
     tags:
       - { name: kernel.event_listener, event: fixtures.init, method: onFixturesInit }
   club.task.listener.migrate:
