--- a/src/Club/CheckinBundle/Resources/config/services.yml
+++ b/src/Club/CheckinBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
   club_checkin.checkin:
     class: Club\CheckinBundle\Helper\Checkin
-    arguments: [@doctrine.orm.entity_manager, @security.context, @event_dispatcher]
+    arguments: [@doctrine.orm.default_entity_manager, @security.context, @event_dispatcher]
