--- a/src/Club/RankingBundle/Resources/config/services.yml
+++ b/src/Club/RankingBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
     club_ranking.ranking:
         class: Club\RankingBundle\Helper\Ranking
-        arguments: [@doctrine.orm.entity_manager, @translator]
+        arguments: [@doctrine.orm.default_entity_manager, @translator]
