--- a/src/Club/ShopBundle/Resources/config/listener.yml
+++ b/src/Club/ShopBundle/Resources/config/listener.yml
@@ -1,32 +1,32 @@
 services:
   club.shopbundle.listener.on_shop_order_listener:
     class: Club\ShopBundle\Listener\NewOrderListener
-    arguments: [@doctrine.orm.entity_manager, @order]
+    arguments: [@doctrine.orm.default_entity_manager, @order]
     tags:
       - { name: kernel.event_listener, event: shop.order, method: onShopOrder }
   club.shopbundle.listener.new_subscription_listener:
     class: Club\ShopBundle\Listener\NewSubscriptionListener
-    arguments: [@doctrine.orm.entity_manager, @order]
+    arguments: [@doctrine.orm.default_entity_manager, @order]
     tags:
       - { name: kernel.event_listener, event: order.paid, method: onOrderPaid, priority: 10 }
   club.shopbundle.listener.auto_renewal.listener:
     class: Club\ShopBundle\Listener\AutoRenewalListener
-    arguments: [@doctrine.orm.entity_manager,@order,@cart]
+    arguments: [@doctrine.orm.default_entity_manager,@order,@cart]
     tags:
       - { name: kernel.event_listener, event: auto_renewal.task, method: onAutoRenewalTask }
   club.shopbundle.subscription_use_attend:
     class: Club\ShopBundle\Listener\SubscriptionUseListener
-    arguments: [@doctrine.orm.entity_manager,@security.context]
+    arguments: [@doctrine.orm.default_entity_manager,@security.context]
     tags:
       - { name: kernel.event_listener, event: team.attend, method: onTeamAttend }
   club.shopbundle.subscription_use_unattend:
     class: Club\ShopBundle\Listener\SubscriptionUseListener
-    arguments: [@doctrine.orm.entity_manager,@security.context]
+    arguments: [@doctrine.orm.default_entity_manager,@security.context]
     tags:
       - { name: kernel.event_listener, event: team.unattend, method: onTeamUnattend }
   club.shopbundle.coupon_use:
     class: Club\ShopBundle\Listener\CouponListener
-    arguments: [@doctrine.orm.entity_manager,@security.context]
+    arguments: [@doctrine.orm.default_entity_manager,@security.context]
     tags:
       - { name: kernel.event_listener, event: coupon.use, method: onCouponUse }
   club.shopbundle.top_menu_listener:
@@ -38,13 +38,13 @@ services:
       - { name: kernel.event_listener, event: dash_menu.render, method: onDashMenuRender }
   club.shopbundle.dashboard_listener:
     class: Club\ShopBundle\Listener\DashboardListener
-    arguments: [@doctrine.orm.entity_manager, @security.context, @templating]
+    arguments: [@doctrine.orm.default_entity_manager, @security.context, @templating]
     tags:
       - { name: kernel.event_listener, event: dashboard.view, method: onDashboardView, priority: 65 }
       - { name: kernel.event_listener, event: admin_dashboard.view, method: onAdminDashboardView, priority: 5 }
   club.shop.fixtures.load:
     class: Club\ShopBundle\Fixtures\Load
-    arguments: [@doctrine.orm.entity_manager]
+    arguments: [@doctrine.orm.default_entity_manager]
     tags:
       - { name: kernel.event_listener, event: fixtures.init, method: onFixturesInit }
   club.shop.version.migrate:
@@ -54,7 +54,7 @@ services:
       - { name: kernel.event_listener, event: version.migrate, method: onVersionMigrate }
   club.shop.listener.cleanup:
     class: Club\ShopBundle\Listener\Cleanup
-    arguments: [@doctrine.orm.entity_manager]
+    arguments: [@doctrine.orm.default_entity_manager]
     tags:
       - { name: kernel.event_listener, event: task.cleanup, method: onTaskCleanup }
 
