--- a/src/Club/TeamBundle/Resources/config/listener.yml
+++ b/src/Club/TeamBundle/Resources/config/listener.yml
@@ -8,17 +8,17 @@ services:
       - { name: kernel.event_listener, event: dash_menu.render, method: onDashMenuRender }
   club.team.repetition.change:
     class: Club\TeamBundle\Listener\GenerateScheduleListener
-    arguments: [@doctrine.orm.entity_manager, %club_team.future_occurs%]
+    arguments: [@doctrine.orm.default_entity_manager, %club_team.future_occurs%]
     tags:
       - { name: kernel.event_listener, event: repetition.change, method: onRepetitionChange }
   club.team.team.task:
     class: Club\TeamBundle\Listener\GenerateScheduleListener
-    arguments: [@doctrine.orm.entity_manager, %club_team.future_occurs%]
+    arguments: [@doctrine.orm.default_entity_manager, %club_team.future_occurs%]
     tags:
       - { name: kernel.event_listener, event: team.task, method: onTeamTask }
   club.team.team.penalty:
     class: Club\TeamBundle\Listener\TeamPenaltyListener
-    arguments: [@doctrine.orm.entity_manager, %club_team.minutes_before_schedule%, %club_team.penalty_enabled%, @order, %club_team.penalty_product_name%]
+    arguments: [@doctrine.orm.default_entity_manager, %club_team.minutes_before_schedule%, %club_team.penalty_enabled%, @order, %club_team.penalty_product_name%]
     tags:
       - { name: kernel.event_listener, event: team.penalty, method: onTeamPenalty }
   club.teambundle.dashboard_listener:
@@ -34,7 +34,7 @@ services:
       - { name: kernel.event_listener, event: checkin.user, method: onCheckinUser }
   club.team.fixtures.load:
     class: Club\TeamBundle\Fixtures\Load
-    arguments: [@doctrine.orm.entity_manager]
+    arguments: [@doctrine.orm.default_entity_manager]
     tags:
       - { name: kernel.event_listener, event: fixtures.init, method: onFixturesInit }
   club.team.fixtures.ical:
