--- a/src/Club/UserBundle/Resources/config/services.yml
+++ b/src/Club/UserBundle/Resources/config/services.yml
@@ -1,7 +1,7 @@
 services:
     failure.password.handler:
         class: Club\UserBundle\Helper\FailurePasswordHandler
-        arguments: [@doctrine.orm.entity_manager]
+        arguments: [@doctrine.orm.default_entity_manager]
     success.login.handler:
         class: Club\UserBundle\Helper\SuccessLoginHandler
         arguments: [@router, @security.context]
@@ -9,19 +9,19 @@ services:
         class: Club\UserBundle\Helper\Version
     clubmaster.ban:
         class: Club\UserBundle\Helper\Ban
-        arguments: [@doctrine.orm.entity_manager, @security.context]
+        arguments: [@doctrine.orm.default_entity_manager, @security.context]
     clubmaster.user:
         class: Club\UserBundle\Helper\User
         arguments: [@service_container]
     club_user.reset_password:
         class: Club\UserBundle\Helper\ResetPassword
-        arguments: [@doctrine.orm.entity_manager]
+        arguments: [@doctrine.orm.default_entity_manager]
     club_user.currency:
         class: Club\UserBundle\Helper\Currency
-        arguments: [@doctrine.orm.entity_manager, @session, @club_user.location]
+        arguments: [@doctrine.orm.default_entity_manager, @session, @club_user.location]
     club_user.location:
         class: Club\UserBundle\Helper\Location
-        arguments: [@doctrine.orm.entity_manager, @session, @logger]
+        arguments: [@doctrine.orm.default_entity_manager, @session, @logger]
     club_user.flash:
         class: Club\UserBundle\Helper\Flash
         arguments: [@session, @translator, @logger]
