* Upgraded symfony to 2.3 rc1, * Fixed some configuration as in the coming version * Removed deprecated files

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -16,7 +16,7 @@ framework:
     templating:
         engines: ['twig']
         #assets_version: SomeVersionScheme
-    default_locale:  %locale%
+    default_locale:  "%locale%"
     trusted_proxies: ~
     session:
         save_path: ~
