--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -1,6 +1,10 @@
 imports:
     - { resource: config.yml }
 
+#framework:
+##    validation:
+##        cache: apc
+
 #doctrine:
 #    orm:
 #        metadata_cache_driver: apc
