--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -6,8 +6,8 @@ security:
             iterations: 10
 
     role_hierarchy:
-        ROLE_SUPER_ADMIN: ROLE_ADMIN
-        ROLE_ADMIN: [ROLE_BLOG_ADMIN, ROLE_BOOKING_ADMIN, ROLE_EVENT_ADMIN, ROLE_MEMBER_ADMIN, ROLE_MESSAGE_ADMIN, ROLE_MATCH_ADMIN, ROLE_SHOP_ADMIN, ROLE_TEAM_ADMIN,  ROLE_PASSKEY_ADMIN,  ROLE_TOURNAMENT_ADMIN, ROLE_NEWS_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_ADMIN: [ROLE_BLOG_ADMIN, ROLE_BOOKING_ADMIN, ROLE_EVENT_ADMIN, ROLE_MEMBER_ADMIN, ROLE_MESSAGE_ADMIN, ROLE_MATCH_ADMIN, ROLE_SHOP_ADMIN, ROLE_TEAM_ADMIN,  ROLE_PASSKEY_ADMIN,  ROLE_TOURNAMENT_ADMIN, ROLE_NEWS_ADMIN]
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
         main:
@@ -27,7 +27,7 @@ security:
         user:
             pattern: ^/
             anonymous: ~
-            switch_user: false
+            switch_user: true
             form_login:
                 failure_handler: failure.password.handler
                 check_path: /login_check
