--- a/src/Club/ShopBundle/Resources/config/services.yml
+++ b/src/Club/ShopBundle/Resources/config/services.yml
@@ -1,7 +1,7 @@
 services:
   cart:
     class: Club\ShopBundle\Helper\Cart
-    arguments: [@doctrine.orm.default_entity_manager,@session,@security.context,@club_user.location]
+    arguments: [@doctrine.orm.default_entity_manager,@session,@security.context,@club_user.location,@clubmaster.user]
   order:
     class: Club\ShopBundle\Helper\Order
     arguments: [@service_container]
