Fixed after upgrade.

--- a/src/Club/APIBundle/Resources/config/listener.yml
+++ b/src/Club/APIBundle/Resources/config/listener.yml
@@ -1,6 +1,6 @@
 services:
     club.apibundle.listener.response:
         class: Club\APIBundle\Listener\ResponseListener
-        arguments: [@service_container]
+        arguments: [@request_stack]
         tags:
             - { name: kernel.event_listener, event: kernel.response, method: OnKernelResponse }
