--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -17,10 +17,12 @@ framework:
         engines: ['twig']
         #assets_version: SomeVersionScheme
     default_locale:  "%locale%"
+    trusted_hosts: ~
     trusted_proxies: ~
     session:
-        save_path: ~
+        handler_id: ~
     fragments:  ~
+    http_method_override: true
 
 # Twig Configuration
 twig:
