Added disable blog functionality.

--- a/src/Club/WelcomeBundle/Resources/config/listener.yml
+++ b/src/Club/WelcomeBundle/Resources/config/listener.yml
@@ -1,7 +1,7 @@
 services:
   club.welcomebundle.left_menu_listener:
     class: Club\WelcomeBundle\Listener\MenuListener
-    arguments: [@router, @security.context, @translator]
+    arguments: [@service_container]
     tags:
       - { name: kernel.event_listener, event: left_menu.render, method: onLeftMenuRender }
       - { name: kernel.event_listener, event: dash_menu.render, method: onDashMenuRender }
