Fixed weather module.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -40,6 +40,7 @@ assetic:
         - "ClubLayoutBundle"
         - "ClubBookingBundle"
         - "ClubInstallerBundle"
+        - "ClubWeatherBundle"
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
