--- a/app/config/clubmaster.yml
+++ b/app/config/clubmaster.yml
@@ -111,9 +111,11 @@ club_checkin:
 
 club_weather:
     enabled: true
-    key: fdeb1d24d8174537121809
-    longtitude: 9.917771
-    latitude: 57.028811
+    appid: 2f57a52e713c92e62195a21efe934c0f
+    location: Aalborg,dk
+    #lonlat: 9.918700,57.048000
+    #cityid: 2624886 # http://openweathermap.org/help/city_list.txt
+    #units: metric
 
 club_tournament:
     enabled: true
