--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+club_kiosk:
+    resource: "@ClubKioskBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 club_ranking:
     resource: "@ClubRankingBundle/Controller/"
     type:     annotation
