--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,12 +1,12 @@
-club_media:
-    resource: "@ClubMediaBundle/Controller/"
-    type:     annotation
-    prefix:   /
-
 club_kiosk:
     resource: "@ClubKioskBundle/Controller/"
     type:     annotation
     prefix:   /
+
+club_media:
+    resource: "@ClubMediaBundle/Controller/"
+    type:     annotation
+    prefix:   /{_locale}
 
 club_ranking:
     resource: "@ClubRankingBundle/Controller/"
