--- a/src/Club/MediaBundle/Resources/config/listener.yml
+++ b/src/Club/MediaBundle/Resources/config/listener.yml
@@ -4,3 +4,5 @@ services:
         arguments: [@router, @security.context, @translator, @service_container]
         tags:
             - { name: kernel.event_listener, event: left_menu.render, method: onLeftMenuRender }
+            - { name: kernel.event_listener, event: dash_menu.render, method: onDashMenuRender }
+
