Added user ajax search.

--- a/src/Club/UserBundle/Resources/config/services.yml
+++ b/src/Club/UserBundle/Resources/config/services.yml
@@ -22,3 +22,6 @@ services:
     club_user.location:
         class: Club\UserBundle\Helper\Location
         arguments: [@doctrine.orm.default_entity_manager, @session, @logger]
+    club_user.form:
+        class: Club\UserBundle\Helper\FormHelper
+        arguments: [@service_container]
